@@ -21,8 +21,8 @@ import types
 from xml.dom import minidom
 import _version  #--in the same directory - created by bzr
 
-#- updated 29th Oct 2012.
-__MAJOR_VERSION__= "0.3.2"
+#- updated 4th March 2013.
+__MAJOR_VERSION__= "0.3.3"
 
 
 if "-v" in sys.argv:
