@@ -1,3 +1,10 @@
+openmolar (0.3.2+bzr0804-0~__DIST__0) __DIST__; urgency=low
+
+  * upstream release
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 01 Mar 2013 13:34:46 +0000
+
+
 openmolar (0.3.2+bzr0802-0~__DIST__0) __DIST__; urgency=low
 
   * upstream release
